# TF-Mamba

./: .gitignore  README.MD  pyproject.toml  train.py
conf/: config.yaml
conf/config/: base.yaml
conf/console/: swanlab.yaml
conf/model/: TFMamba.yaml  base.yaml  cnn.yaml  tfmamba.yaml
docs/article/: report.tex
scripts/: data.sh  env.sh
scripts/train/: cnn_by_file.sh  cnn_by_window.sh  tfmamba_by_file.sh  tfmamba_by_window.sh
src/tfmamba.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tfmamba/helper/: dataset.py  pipeline.py
src/tfmamba/model/: cnn.py  dummy.py  tfmamba.py
src/tfmamba/protocol/: dataset.py  experiment.py  logger.py  metrics.py
src/tfmamba/utils/: dataloader.py  logger.py  metrics.py
