[project]
name = "tfmamba"
version = "0.1.0"
description = "Time–Frequency Dual-Branch State Space Network"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
